--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,7 @@ body {
 
 main {
     height: 100vh;
-    /* background-image: url('../images/emerald-lake.jpg'); */
-    /* background-image: url('../images/prags-lake.jpg'); */
+    overflow: hidden;
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -86,6 +85,7 @@ ul li:last-child {
     flex-direction: column;
     color: white;
     text-align: center;
+    overflow: hidden;
 }
 
 
@@ -162,16 +162,19 @@ button:hover {
 
 #today {
     font-size: 1.6rem;
+    position: relative;
 }
 
 #todo {
-    font-size: 3rem;
+    font-size: 1rem;
     text-align: right;
-    margin: 0 .7rem;
 }
+
 
 .no-outline-btn {
     border: 0;
+    padding: .5rem;
+    font-size: 3rem;
     margin: 0;
     border-radius: 10px;
 }
@@ -198,6 +201,7 @@ small {
     width: 100%;
     margin: 0 auto;
     display: flex;
+    padding: 0 .8rem;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -211,7 +215,6 @@ small {
 }
 
 #focusdisplay {
-    cursor: pointer;
     display: inline-block;
     padding: 1rem;
 }
@@ -270,4 +273,88 @@ a:hover {
 
 .todo-item:hover {
     background-color: #EEE;
+}
+
+
+.edit-focus {
+    position: absolute;
+    top: 34px;
+    border:0;
+    display: inline-block;
+    
+}
+
+.edit-focus:hover {
+    background-color: rgba(0, 0, 0, .3);
+    border-radius: 3px;
+}
+
+.nomargin {
+    margin: 0;
+}
+
+#clock-display {
+    font-size: 8rem;
+    max-width: 900px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.second {
+    font-size: 2rem;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    right: -120px;
+    bottom: 105px;
+    display: inline-block;
+}
+
+
+
+@media (max-width: 550px) {
+    #clock {
+        font-size: 5rem;
+    }
+
+    #clock small {
+        font-size: 2rem;
+    }
+
+    #todo-modal {
+        top: 55px;
+        left: 0;
+        max-width: 100%;
+    }
+
+    .second {
+        display: none;
+    }
+}
+
+@media (max-width: 400px) {
+    #clock-display {
+        font-size: 5rem;
+    }
+
+    #loggedingreet {
+        font-size: 1.5rem;
+    }
+
+    #clock small {
+        font-size: 2rem;
+    }
+
+    #todo-modal {
+        top: 55px;
+        left: 0;
+        max-width: 100%;
+    }
+
+    .second {
+        display: none;
+    }
 }
